# LiveStream_TTS

./: .dockerignore  .gitignore  Architecture.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demo/: QA.md  (+13 more)
services/analytics-svc/: Dockerfile  pyproject.toml
services/analytics-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/analytics-svc/src/: config.py  main.py
services/analytics-svc/src/api/: grpc_impl.py
services/analytics-svc/src/http/: routes.py
services/analytics-svc/src/models/: metrics.py
services/analytics-svc/src/services/: analytics_service.py
services/analytics-svc/tests/: test_analytics.py
services/audit-svc/: Dockerfile  pyproject.toml  requirements.txt
services/audit-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/audit-svc/src/: config.py  main.py
services/audit-svc/src/api/: grpc_impl.py
services/audit-svc/src/http/: routes.py
services/audit-svc/src/services/: audit_service.py
services/audit-svc/tests/: test_audit.py
services/billing-svc/: Dockerfile  pyproject.toml
services/billing-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/billing-svc/src/: config.py  main.py
services/billing-svc/src/api/: grpc_impl.py
services/billing-svc/src/http/: routes.py
services/billing-svc/tests/: test_billing.py
services/gateway-svc/: Dockerfile  pyproject.toml  requirements.txt
services/gateway-svc/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/gateway-svc/src/: __init__.py  config.py  grpc_client.py  main.py
services/gateway-svc/src/middleware/: __init__.py  auth.py  logging.py  ratelimit.py
services/gateway-svc/src/routes/: __init__.py  deps.py  health.py  proxy.py
services/gateway-svc/tests/: __init__.py  test_auth.py  test_ratelimit.py
services/interact-svc/: Dockerfile  pyproject.toml  requirements.txt
services/interact-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/interact-svc/src/: __init__.py  config.py  main.py
services/interact-svc/src/api/: __init__.py  grpc_impl.py
services/interact-svc/src/http/: routes.py
services/interact-svc/src/http_routes/: __init__.py
services/interact-svc/src/models/: __init__.py  interaction.py
services/interact-svc/src/pipeline/: __init__.py  collector.py  moderator.py  orchestrator.py  profile_lookup.py  router.py
services/interact-svc/src/services/: __init__.py  interaction_service.py  reply_service.py
services/interact-svc/tests/: __init__.py  test_moderator.py  test_pipeline.py  test_router.py
services/knowledge-svc/: Dockerfile  pyproject.toml
services/knowledge-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/knowledge-svc/src/: __init__.py  config.py  main.py
services/knowledge-svc/src/api/: grpc_impl.py
services/knowledge-svc/src/http/: routes.py
services/knowledge-svc/src/http_routes/: routes.py
services/knowledge-svc/src/models/: __init__.py  knowledge.py
services/knowledge-svc/src/services/: __init__.py  embedding_service.py  knowledge_service.py  vector_store.py
services/knowledge-svc/tests/: __init__.py  conftest.py  test_knowledge.py
services/live-mgr-svc/: Dockerfile  pyproject.toml  requirements.txt
services/live-mgr-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/live-mgr-svc/src/: config.py  main.py
services/live-mgr-svc/src/api/: grpc_impl.py
services/live-mgr-svc/src/http/: routes.py
services/live-mgr-svc/src/models/: live_room.py
services/live-mgr-svc/src/services/: live_room_service.py  playlist_service.py
services/live-mgr-svc/src/state_machine/: live_state.py
services/live-mgr-svc/tests/: conftest.py  test_playlist.py  test_state_machine.py
services/nlp-svc/: Dockerfile  pyproject.toml  requirements.txt
services/nlp-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/nlp-svc/src/: __init__.py  config.py  main.py
services/nlp-svc/src/api/: __init__.py  grpc_impl.py
services/nlp-svc/src/classifiers/: __init__.py  intent.py  ml_backends.py  sentiment.py
services/nlp-svc/src/detectors/: __init__.py  sensitive.py
services/nlp-svc/src/http/: __init__.py  routes.py
services/nlp-svc/src/services/: __init__.py  nlp_service.py
services/nlp-svc/tests/: __init__.py  conftest.py  test_intent.py  test_sensitive.py  test_sentiment.py
services/platform-svc/: Dockerfile  pyproject.toml  requirements.txt
services/platform-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/platform-svc/src/: config.py  main.py
services/platform-svc/tests/: test_analytics_analytics.py  test_audit_audit.py  test_avatar_avatar_crud.py  test_billing_billing.py  test_platform_sync_sync.py  test_product_import.py  test_product_product_crud.py  test_product_sku.py  test_profile_profile.py  test_user_auth.py  test_user_conftest.py  test_user_grpc.py  test_voice___init__.py  test_voice_voice_crud.py
services/platform-sync-svc/: Dockerfile  pyproject.toml  requirements.txt
services/platform-sync-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/platform-sync-svc/src/: config.py  main.py
services/platform-sync-svc/src/adapters/: douyin.py  taobao.py
services/platform-sync-svc/src/api/: grpc_impl.py
services/platform-sync-svc/src/http/: routes.py
services/platform-sync-svc/src/services/: binding_service.py  sync_service.py
services/platform-sync-svc/tests/: test_sync.py
services/profile-svc/: Dockerfile  pyproject.toml
services/profile-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/profile-svc/src/: config.py  main.py
services/profile-svc/src/api/: grpc_impl.py
services/profile-svc/tests/: test_profile.py
services/script-svc/: Dockerfile  pyproject.toml  requirements.txt
services/script-svc/k8s/: configmap.yaml  deployment.yaml  service.yaml
services/script-svc/src/: config.py  main.py
services/script-svc/tests/: test_ai_generation.py  test_script_crud.py
(+340 files in other folders)
