[project]
name = "script-svc"
version = "0.1.0"
description = "Script & Content Service — AI Script Generation, Editing, Versioning, Templates"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*", "modules/*"]

[project.scripts]
script-svc = "src.main:main"
